tests/integration/snapshots/library/test_library_publish_compilation_error.stderr.txt
Error: [ROOT]/contracts/broken[LINE]: error: expected <expression>, got `;`
   1 | fun main() { return 1 +; }
     |                        ^

Fix compilation error first to publish library
